# ChangeLog for dev-haskell/time
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.12 2007/12/16 20:27:13 drac Exp $

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> time-1.1.1.ebuild:
  amd64 stable wrt #201984

  16 Dec 2007; nixnut <nixnut@gentoo.org> time-1.1.1.ebuild:
  Stable on ppc wrt bug 201984

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.0.ebuild,
  time-1.1.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> time-1.1.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> time-1.1.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> time-1.1.1.ebuild:
  stable x86, bug 201984

  11 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.1.1.ebuild:
  Marked ~ia64.

*time-1.1.1 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +time-1.1.1.ebuild:
  New version from ghc-6.6.1 extralibs collection.

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.0.ebuild:
  Use dev-lang/ghc rather than virtual/ghc.

  06 Apr 2007; Chris Parrott <cparrott@gentoo.org> time-1.0.ebuild:
  added ~ppc and ~sparc keywords

  04 Apr 2007; Chris Parrott <cparrott@gentoo.org> time-1.0.ebuild:
  added ~alpha keyword

*time-1.0 (17 Mar 2007)

  17 Mar 2007; Lennart Kolmodin <kolmodin@gentoo.org> +metadata.xml,
  +time-1.0.ebuild:
  Add modular lib to ghc 6.6. See bug 151012
