@@ -1,4 +1,6 @@
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
+DIST time-1.1.2.0.tar.gz 51035 RMD160 8931ed32b9c2463e0f92fa3cea08cd3ffac11c7c SHA1 770dd3f2db6958860475cd765483e901b2fa647b SHA256 09d1fdcab8fb176d0001b7ffd4bee7d4bf1c77b8e5f333aff01f2ffe19c6a47e
 EBUILD time-1.1.1.ebuild 660 RMD160 ad5e9a4754446b04fb16824afbccc67f7dc839dd SHA1 1e50d85342e1fdbc734981eb7fbc15799cdbfa32 SHA256 e4135ad3b147e75f1badb0c28137cd99b33211f4491975cce1101e806874640e
-MISC ChangeLog 1549 RMD160 9e25eaef1145ce61864b7e2495ecc1286e45c08f SHA1 0bdc901492ff70ecbd7f3bf216af00ad2f6dff33 SHA256 6774fd3e3ef9455698851e94f625c19db45e220c0ed1386cb3cb061794e9a03e
+EBUILD time-1.1.2.0.ebuild 569 RMD160 56eca3ef986b0955f11c329b49c9072be0ceaaeb SHA1 719d983d69f29d291dc789e99794ebcb14e095ab SHA256 87a8e5d8e4ba1bfa22a07b67d13188da2a51b5bdab458178217e3502013edc56
+MISC ChangeLog 1715 RMD160 50b2e44c1da0ba475f46e1c462c02d29fa1df7c6 SHA1 41def85e7710036df9e6a03d465c98234200afc6 SHA256 2e70cdf60d3c220af8abb700ce8fcccc47ac0d7f001c29a3bdb6886a790fcb4e
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
