@@ -1,0 +1,20 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/time-1.1.2.0.ebuild,v 1.1 2007/12/20 02:40:42 dcoutts Exp $
+
+EAPI="prefix"
+
+CABAL_FEATURES="lib profile haddock"
+CABAL_MIN_VERSION=1.2
+inherit haskell-cabal
+
+DESCRIPTION="A Haskell time library."
+HOMEPAGE="http://haskell.org/ghc/"
+SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~x86 ~x86-macos"
+IUSE=""
+
+DEPEND=">=dev-lang/ghc-6.6"
