@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/time
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.12 2007/12/16 20:27:13 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.13 2007/12/20 02:40:42 dcoutts Exp $
+
+*time-1.1.2.0 (20 Dec 2007)
+
+  20 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +time-1.1.2.0.ebuild:
+  New version. Released with ghc-6.8 but works with ghc-6.6.
 
   16 Dec 2007; Samuli Suominen <drac@gentoo.org> time-1.1.1.ebuild:
   amd64 stable wrt #201984
